Russian abbreviated version

--- a/assets/events-short.toml
+++ b/assets/events-short.toml
@@ -1,148 +1,148 @@
-"13.787 bya" = "Big Bang"
-# "13.6 bya" = "First confimed star, SMSS J0313−6708"
-# "11 bya" = "Milky Way merges with the Kraken (Recent hypothesis)"
-"9.8 bya" = "Andromeda Galaxy forms"
-# "6.9 bya" = "Arcturus forms"
-"4.6 bya" = "Solar System forms"
-# "4.54 bya" = "Earth is formed"
-# "4.5 bya" = "Theia impacts Earth, forming the Moon"
-# "4.1 bya" = "Earliest known life forms"
-"3.5 bya" = "Last common ancestor of all life"
-# "2.9 bya" = "Pongola glaciation"
-# "2.5 bya" = "Huronian glaciation"
-"2.460 bya" = "Great Oxidation Event"
-# "2.2 bya" = "Huronian glaciation ends"
-# "2.1 bya" = "Earliest eukaryote fossils"
+"13.787 млрд лет назад" = "Большой Взрыв"
+# "13.6 млрд лет назад" = "First confimed star, SMSS J0313−6708"
+# "11 млрд лет назад" = "Milky Way merges with the Kraken (Recent hypothesis)"
+"9.8 млрд лет назад" = "Формируется Галактика Андромеды"
+# "6.9 млрд лет назад" = "Arcturus forms"
+"4.6 млрд лет назад" = "Формируется Солнечная система"
+# "4.54 млрд лет назад" = "Earth is formed"
+# "4.5 млрд лет назад" = "Theia impacts Earth, forming the Moon"
+# "4.1 млрд лет назад" = "Earliest known life forms"
+"3.5 млрд лет назад" = "Последний общий предок всего живого"
+# "2.9 млрд лет назад" = "Pongola glaciation"
+# "2.5 млрд лет назад" = "Huronian glaciation"
+"2.460 млрд лет назад" = "Великое Окисление"
+# "2.2 млрд лет назад" = "Huronian glaciation ends"
+# "2.1 млрд лет назад" = "Earliest eukaryote fossils"
 
 # https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1689654/
-"1.576 bya" = "Plants, animals, and fungi diverge"
+"1.576 млрд лет назад" = "Растения, животные и грибы расходятся"
 
-# "1.26 bya" = "Rodinia starts to form"
-# "830 mya" = "First rifts on Rodinia, starting to break apart"
-# "760 mya" = "First Animalia"
-# "717 mya" = "Sturtian glaciation begins"
-# "650 mya" = "Pannotia forms"
-# "560 mya" = "Pannotia breaks up"
-"538.8 mya" = "Cambrian explosion"
-# "440 mya" = "Andean-Saharan glaciation" # 460-420
-# "445 mya" = "Late Ordovician mass extinction caused by Andean-Saharan glaciation"
-# "372 mya" = "Late Devonian extinction"
-# "360 mya" = "Late Paleozoic icehouse begins"
-"335 mya" = "Pangaea forms"
-# "312 mya" = "Basal amniotes (ancestors of reptiles and mammals)"
-# "259 mya" = "Capitanian mass extinction event"
-# "255 mya" = "Late Paleozoic icehouse ends"
-# "251.9 mya" = "Permian–Triassic extinction event, aka the \"Great Dying\""
-"233.23 mya" = "First dinosaurs" # between 243 and 233.23
-# "201.4 mya" = "Triassic–Jurassic extinction event, caused by Central Atlantic magmatic province"
-"180 mya" = "Pangaea splits into Laurasia and Gondwana"
-# "155 mya" = "Earliest avialans (Archaeopteryx), ancestors of birds"
-# "130 mya" = "Earliest angiosperms (flowering plants)"
-# "90 mya" = "India separates from Madagascar"
-# "66.25 mya" = "Deccan Traps"
-"66.043 mya" = "Non-avian dinosaurs go extinct"
-# "55 mya" = "Laurasia splits into Laurentia and Eurasia" # actually 60–55
-"35 mya" = "India begins to collide with Asia"
-# "25 mya" = "Apes diverge from the Old World monkeys"
-# "18 mya" = "Great apes diverge from gibbons"
-"16 mya" = "Iceland forms" # actually 18-16
-# "14 mya" = "Hominins diverge from orangutans (Pongo)"
-"7 mya" = "Hominini diverge from gorillas"
-# "5 mya" = "Humans diverge from chimpanzees (Pan)" # actually 3-5
-"4.2 mya" = "Earliest Australopithecus"
-# "3.4 mya" = "Earliest stone tools"
-# "2.75 mya" = "LD 350-1, earliest known specimen of genus Homo"
-"2.12 mya" = "Homo erectus presence in China"
-# "1.8 mya" = "Oldest known human skeletal remains outside of Africa (Homo erectus)"
-"1 mya" = "Last common ancestor of modern humans and Neanderthals" # 1.2 - 0.8 mya
-# "0.7 mya" = "Last reversal of the Earth's magnetic field"
-# "430 kya" = "Earliest Neanderthals (rough date)"
-# "450 kya" = "Elster glaciation" # 500-400
-# "408 kya" = "Holstein interglacial" # 421-395
-# "300 kya" = "Levallois technique of knapping used by Neanderthals in Europe"
-# "285 kya" = "Earliest Denisovans"
-"250 kya" = "Homo sapiens migrations" # 300-200 kya
-# "194 kya" = "Penultimate Glacial Period"
-# "160 kya" = "Mousterian (Neanderthal) culture in Europe"
-# "150 kya" = "Peopling of Africa, Khoisan mtDNA haplogroup first to differentiate"
-# "135 kya" = "Penultimate Glacial Period ends"
-"125 kya" = "Last Interglacial Period" # 130-115 kya
-# "108 kya" = "The last known population of Homo erectus on Java goes extinct"
-# "74 kya" = "Toba eruption, which may have caused a genetic bottleneck in humans"
-"65 kya" = "Human migrations reach Australia"
-# "52 kya" = "Latest remains of Denisovans"
-"40 kya" = "Neanderthal extinction"
-"26.5 kya" = "Last Glacial Maximum"
-# "22 kya" = "Last unified archaeological culture in Europe (Gravettian culture) splits"
-# "25 kya" = "Oldest permanent human settlement (at Dolní Věstonice)"
-# "20 kya" = "Last Glacial Maximum ends"
-"17 kya" = "Human migration to the Americas" # though estimates range from 15k to (newer estimate) 25k
-# "14.6 kya" = "African humid period begins"
-# "12.9 kya" = "Younger Dryas begins"
-# "11.7 kya" = "Younger Dryas ends"
-"10.5 kya" = "Cattle domesticated"
-# "8.2 kya" = "8.2-kiloyear event (sudden cooling)"
-# "5.5 kya" = "African humid period ends"
-"3500 BC" = "First writing"
-# "3250 BC" = "First hieroglyphics"
-# "2600 BC" = "Great Pyramid of Giza"
-# "4.2 kya" = "4.2-kiloyear event (sudden aridification)"
-# "1750 BC" = "Code of Hammurabi"
-"1200 BC" = "Late Bronze Age collapse"
-# "550 BC" = "Achaemenid Empire under Cyrus the Great"
-# "323 BC" = "Alexander the Great dies in Babylon"
-"44 BC" = "Julius Caesar"
-# "319 AD" = "Gupta Empire established"
-# "476 AD" = "Fall of the Western Roman Empire"
-# "555 AD" = "Byzantine Empire under Justinian the Great, at its greatest extent"
-# "622 AD" = "The Hijrah (Muhammad's migration from Mecca to Medina)"
-"800 AD" = "Charlemagne"
-# "1066 AD" = "Norman conquest of England"
-# "1204 AD" = "Sack of Constantinople"
-# "1259 AD" = "Mongol Empire before fracture"
-# "1347 AD" = "The Black Death in Europe"
-"1492 AD" = "Discovery of the New World"
-# "1517 AD" = "Protestant Reformation - Martin Luther publishes the Ninety-five Theses"
-# "1566 AD" = "Suleiman the Great dies"
-# "1648 AD" = "Thirty Years' War ends"
-# "1721 AD" = "Peter the Great proclaimed Emperor of Russia"
-# "1763 AD" = "Seven Years' War ends"
-"1812 AD" = "Napoleonic France"
-# "1848 AD" = "Revolutions of 1848"
-# "1871 AD" = "Unification of Germany after the Franco-Prussian war"
-# "1896-04 AD" = "1896 Summer Olympics in Athens, first in modern history"
-"1914 AD" = "World War I"
-# "1918 AD" = "World War I ends"
-# "1929-10 AD" = "Great Depression" # starting with the Wall Street Crash of 1929
-# "1931-09-18 AD" = "Japanese invasion of Manchuria"
-"1939 AD" = "World War II"
-# "1945-08 AD" = "World War II - Atomic bombings of Hiroshima and Nagasaki"
-# "1953-07-27 AD" = "Korean War - Armistice Agreement"
-# "1956-10-29 AD" = "Suez Crisis" # beginning
-# "1962-10 AD" = "Cuban Missile Crisis"
-"1969-07-20 AD" = "Apollo 11 Moon landing"
-# "1975-04-30 AD" = "Vietnam War ends"
-# "1981-06-05 AD" = "HIV pandemic"
-# "1991-12-26 AD" = "Dissolution of the Soviet Union"
-# "1995-10-14 AD" = "Bosnian War ends with Dayton Agreement" # signed
-"2001-09-11 AD" = "September 11 attacks"
-# "2004-12-26 AD" = "2004 Indian Ocean earthquake and tsunami"
-# "2007-06 AD" = "Hamas takeover of Gaza"
-# "2008 AD" = "Great Recession"
-"2010-12-17 AD" = "Arab Spring"
-# "2014-03-18 AD" = "Russia annexes Crimea"
-# "2015-05 AD" = "ISIS at peak territorial control" # https://en.wikipedia.org/wiki/File:Islamic_State_(May_2015)_(orthographic_projection).png
-# "2016-11-08 AD" = "Trump wins 2016 US presidential election"
-# "2018-07 AD" = "2018 Russian pension protests"
-# "2019-06-09 AD" = "Hong Kong protests begin"
-"2020-03-11 AD" = "COVID-19 pandemic" # declared a pandemic; identified earlier
-# "2020-11-03 AD" = "Tigray War begins"
-# "2021-01-06 AD" = "January 6 Capitol attack"
-# "2021-02-01 AD" = "Coup and subsequent civil war in Myanmar"
-# "2021-08-30 AD" = "War in Afghanistan ends"
-"2022-02-24 AD" = "War in Ukraine"
-# "2022-11-03 AD" = "Tigray War ends"
-# "2023-02-06 AD" = "2023 Turkey–Syria earthquakes"
-# "2023-06-23 AD" = "Wagner Group rebellion"
-# "2023-09-20 AD" = "Azerbaijan takes control over Nagorno-Karabakh"
-"2023-10-07 AD" = "Israel–Hamas war"
+# "1.26 млрд лет назад" = "Rodinia starts to form"
+# "830 млн лет назад" = "First rifts on Rodinia, starting to break apart"
+# "760 млн лет назад" = "First Animalia"
+# "717 млн лет назад" = "Sturtian glaciation begins"
+# "650 млн лет назад" = "Pannotia forms"
+# "560 млн лет назад" = "Pannotia breaks up"
+"538.8 млн лет назад" = "Кембрийский взрыв"
+# "440 млн лет назад" = "Andean-Saharan glaciation" # 460-420
+# "445 млн лет назад" = "Late Ordovician mass extinction caused by Andean-Saharan glaciation"
+# "372 млн лет назад" = "Late Devonian extinction"
+# "360 млн лет назад" = "Late Paleozoic icehouse begins"
+"335 млн лет назад" = "Образуется Пангея"
+# "312 млн лет назад" = "Basal amniotes (ancestors of reptiles and mammals)"
+# "259 млн лет назад" = "Capitanian mass extinction event"
+# "255 млн лет назад" = "Late Paleozoic icehouse ends"
+# "251.9 млн лет назад" = "Permian–Triassic extinction event, aka the \"Great Dying\""
+"233.23 млн лет назад" = "Первые динозавры" # between 243 and 233.23
+# "201.4 млн лет назад" = "Triassic–Jurassic extinction event, caused by Central Atlantic magmatic province"
+"180 млн лет назад" = "Пангея распадается на Лавразию и Гондвану"
+# "155 млн лет назад" = "Earliest avialans (Archaeopteryx), ancestors of birds"
+# "130 млн лет назад" = "Earliest angiosperms (flowering plants)"
+# "90 млн лет назад" = "India separates from Madagascar"
+# "66.25 млн лет назад" = "Deccan Traps"
+"66.043 млн лет назад" = "Динозавры (кроме птиц) вымирают"
+# "55 млн лет назад" = "Laurasia splits into Laurentia and Eurasia" # actually 60–55
+"35 млн лет назад" = "Индия сталкивается с Азией"
+# "25 млн лет назад" = "Apes diverge from the Old World monkeys"
+# "18 млн лет назад" = "Great apes diverge from gibbons"
+"16 млн лет назад" = "Формируется Исландия" # actually 18-16
+# "14 млн лет назад" = "Hominins diverge from orangutans (Pongo)"
+"7 млн лет назад" = "Последний общий предок людей и горилл"
+# "5 млн лет назад" = "Humans diverge from chimpanzees (Pan)" # actually 3-5
+"4.2 млн лет назад" = "Первые австралопитеки"
+# "3.4 млн лет назад" = "Earliest stone tools"
+# "2.75 млн лет назад" = "LD 350-1, earliest known specimen of genus Homo"
+"2.12 млн лет назад" = "Homo erectus найден в Китае"
+# "1.8 млн лет назад" = "Oldest known human skeletal remains outside of Africa (Homo erectus)"
+"1 млн лет назад" = "Последний общий предок людей и неандертальцев" # 1.2 - 0.8 млн лет назад
+# "0.7 млн лет назад" = "Last reversal of the Earth's magnetic field"
+# "430 тыс. лет назад" = "Earliest Neanderthals (rough date)"
+# "450 тыс. лет назад" = "Elster glaciation" # 500-400
+# "408 тыс. лет назад" = "Holstein interglacial" # 421-395
+# "300 тыс. лет назад" = "Levallois technique of knapping used by Neanderthals in Europe"
+# "285 тыс. лет назад" = "Earliest Denisovans"
+"250 тыс. лет назад" = "Homo sapiens мигрируют за пределы Африки" # 300-200 тыс. лет назад
+# "194 тыс. лет назад" = "Penultimate Glacial Period"
+# "160 тыс. лет назад" = "Mousterian (Neanderthal) culture in Europe"
+# "150 тыс. лет назад" = "Peopling of Africa, Khoisan mtDNA haplogroup first to differentiate"
+# "135 тыс. лет назад" = "Penultimate Glacial Period ends"
+"125 тыс. лет назад" = "Последний межледниковый период" # 130-115 тыс. лет назад
+# "108 тыс. лет назад" = "The last known population of Homo erectus on Java goes extinct"
+# "74 тыс. лет назад" = "Toba eruption, which may have caused a genetic bottleneck in humans"
+"65 тыс. лет назад" = "Заселение Австралии"
+# "52 тыс. лет назад" = "Latest remains of Denisovans"
+"40 тыс. лет назад" = "Неандертальцы вымирают"
+"26.5 тыс. лет назад" = "Максимум последнего оледенения"
+# "22 тыс. лет назад" = "Last unified archaeological culture in Europe (Gravettian culture) splits"
+# "25 тыс. лет назад" = "Oldest permanent human settlement (at Dolní Věstonice)"
+# "20 тыс. лет назад" = "Last Glacial Maximum ends"
+"17 тыс. лет назад" = "Заселение Америки" # though estimates range from 15k to (newer estimate) 25k
+# "14.6 тыс. лет назад" = "African humid period begins"
+# "12.9 тыс. лет назад" = "Younger Dryas begins"
+# "11.7 тыс. лет назад" = "Younger Dryas ends"
+"10.5 тыс. лет назад" = "Одомашнивание скота"
+# "8.2 тыс. лет назад" = "8.2-kiloyear event (sudden cooling)"
+# "5.5 тыс. лет назад" = "African humid period ends"
+"3500 до н.э." = "Первые системы письма"
+# "3250 до н.э." = "First hieroglyphics"
+# "2600 до н.э." = "Great Pyramid of Giza"
+# "4.2 тыс. лет назад" = "4.2-kiloyear event (sudden aridification)"
+# "1750 до н.э." = "Code of Hammurabi"
+"1200 до н.э." = "Катастрофа бронзового века"
+# "550 до н.э." = "Achaemenid Empire under Cyrus the Great"
+# "323 до н.э." = "Alexander the Great dies in Babylon"
+"44 до н.э." = "Юлий Цезарь"
+# "319 н.э." = "Gupta Empire established"
+# "476 н.э." = "Fall of the Western Roman Empire"
+# "555 н.э." = "Byzantine Empire under Justinian the Great, at its greatest extent"
+# "622 н.э." = "The Hijrah (Muhammad's migration from Mecca to Medina)"
+"800 н.э." = "Карл Великий коронован Папой Римским"
+# "1066 н.э." = "Norman conquest of England"
+# "1204 н.э." = "Sack of Constantinople"
+# "1259 н.э." = "Mongol Empire before fracture"
+# "1347 н.э." = "The Black Death in Europe"
+"1492 н.э." = "Открытие Нового Света"
+# "1517 н.э." = "Protestant Reformation - Martin Luther publishes the Ninety-five Theses"
+# "1566 н.э." = "Suleiman the Great dies"
+# "1648 н.э." = "Thirty Years' War ends"
+# "1721 н.э." = "Peter the Great proclaimed Emperor of Russia"
+# "1763 н.э." = "Seven Years' War ends"
+"1812 н.э." = "Наполеоновская Франция"
+# "1848 н.э." = "Revolutions of 1848"
+# "1871 н.э." = "Unification of Germany after the Franco-Prussian war"
+# "1896-04 н.э." = "1896 Summer Olympics in Athens, first in modern history"
+"1914 н.э." = "Первая мировая война"
+# "1918 н.э." = "World War I ends"
+# "1929-10 н.э." = "Great Depression" # starting with the Wall Street Crash of 1929
+# "1931-09-18 н.э." = "Japanese invasion of Manchuria"
+"1939 н.э." = "Вторая мировая война"
+# "1945-08 н.э." = "World War II - Atomic bombings of Hiroshima and Nagasaki"
+# "1953-07-27 н.э." = "Korean War - Armistice Agreement"
+# "1956-10-29 н.э." = "Suez Crisis" # beginning
+# "1962-10 н.э." = "Cuban Missile Crisis"
+"1969-07-20 н.э." = "Лунная посадка Аполлона-11"
+# "1975-04-30 н.э." = "Vietnam War ends"
+# "1981-06-05 н.э." = "HIV pandemic"
+# "1991-12-26 н.э." = "Dissolution of the Soviet Union"
+# "1995-10-14 н.э." = "Bosnian War ends with Dayton Agreement" # signed
+"2001-09-11 н.э." = "Террористические акты 11 сентября 2001 года"
+# "2004-12-26 н.э." = "2004 Indian Ocean earthquake and tsunami"
+# "2007-06 н.э." = "Hamas takeover of Gaza"
+# "2008 н.э." = "Great Recession"
+"2010-12-17 н.э." = "Арабская весна"
+# "2014-03-18 н.э." = "Russia annexes Crimea"
+# "2015-05 н.э." = "ISIS at peak territorial control" # https://en.wikipedia.org/wiki/File:Islamic_State_(May_2015)_(orthographic_projection).png
+# "2016-11-08 н.э." = "Trump wins 2016 US presidential election"
+# "2018-07 н.э." = "2018 Russian pension protests"
+# "2019-06-09 н.э." = "Hong Kong protests begin"
+"2020-03-11 н.э." = "Пандемия COVID-19" # declared a pandemic; identified earlier
+# "2020-11-03 н.э." = "Tigray War begins"
+# "2021-01-06 н.э." = "January 6 Capitol attack"
+# "2021-02-01 н.э." = "Coup and subsequent civil war in Myanmar"
+# "2021-08-30 н.э." = "War in Afghanistan ends"
+"2022-02-24 н.э." = "Вторжение России на Украину"
+# "2022-11-03 н.э." = "Tigray War ends"
+# "2023-02-06 н.э." = "2023 Turkey–Syria earthquakes"
+# "2023-06-23 н.э." = "Wagner Group rebellion"
+# "2023-09-20 н.э." = "Azerbaijan takes control over Nagorno-Karabakh"
+"2023-10-07 н.э." = "Война в Газе"
