--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "tomli>=2.0.1",
 ]
 requires-python = "==3.11.*"
-readme = "README.md"
+readme = "REн.э.ME.md"
 license = {text = "GPL-3.0"}
 
 [tool.pdm]
